Create readme and improve resource embedding

--- a/templates/partials/title_area.ejs
+++ b/templates/partials/title_area.ejs
@@ -52,7 +52,7 @@
     <div class="socialsArea">
       <% section.socials.forEach(social => { %>
         <div class="socialItem">
-          <img class="socialIcon" src=".<%= settings.social_icons %>/<%= social.service %>.png" />
+          <img class="socialIcon" src="./resources/social_icons/<%= social.service %>.png" />
           <p class="socialName"><%= social.tag %></p>
         </div>
       <% }) %>
