--- a/templates/template.ejs
+++ b/templates/template.ejs
@@ -82,7 +82,7 @@
     }
 
     .section {
-      margin-top: 3mm;
+      margin-top: 4.5mm;
       display: flex;
       flex-direction: column;
       align-items: stretch;
@@ -91,7 +91,7 @@
     .section .sectionTitle {
       text-align: center;
       font-size: 28px;
-      margin-bottom: 2mm;
+      margin-bottom: .8mm;
     }
 
     .section .sectionDisclaimer {
